# H-Rocks-SIGMOD25-artifact

./: .gitignore  README.md  compile_all.sh
Plush/: CMakeLists.txt  compile.sh  setup.sh
Plush/examples/: example.cpp  gutenberg.cpp  parse_deletes.sh  parse_gets.sh  parse_gets.sh.bak  parse_puts.sh  parse_range.sh  parse_updates.sh  parse_var_kv_gets.sh  parse_var_kv_puts.sh  parse_var_kv_puts.sh.bak  parse_ycsbA.sh  parse_ycsbA.sh.bak  parse_ycsbB.sh  parse_ycsbC.sh  parse_ycsbC.sh.bak  parse_ycsbD.sh  run_delete.sh  run_diff_kv_sizes.sh  run_get.sh  run_get_diff_threads.sh  run_put.sh  run_put_diff_threads.sh  run_range.sh  run_update.sh  run_var_kv_gets.sh  run_var_kv_puts.sh  run_ycsbA.sh  run_ycsbB.sh  run_ycsbC.sh  run_ycsbD.sh  test_delete.cpp  test_get.cpp  test_get_int.cpp  test_get_mt.cpp  test_put.cpp  test_put_int.cpp  test_put_mt.cpp  test_range.cpp  test_update.cpp  (+4 more)
Plush/include/utree/: utree.h
Plush/scripts/: delete_state.sh  insertratio.csv
Plush/src/benchmarking/: PibenchWrapper.h  PibenchWrapperVar.h
Plush/test/: tests.cpp
nvm-datastructure/multiThread/utree/: build.sh  concurrency_test  concurrency_test.cc  concurrency_test2  concurrency_test2.cc  get_test  get_test.cc  insert_test  lost_update  main-gu-zipfian  remove_test  run_gets.sh  run_inserts.sh  run_removes.sh  run_updates.sh  update_test  update_test.cc
nvm-datastructure/singleThread/uTree/: build.sh  concurrency_test.cc  main  main.cpp  utree.h
pmem-rocksdb/: compile.sh
pmem-rocksdb/benchmarks/: Makefile  parse_atomic_txn.sh  parse_deletes.sh  parse_deletes.sh.bak  parse_gets.sh  parse_puts.sh  parse_puts.sh.bak  parse_range.sh  parse_range.sh.bak  parse_updates.sh  parse_var_kv_gets.sh  parse_var_kv_puts.sh  parse_ycsbA.sh  parse_ycsbB.sh  parse_ycsbB.sh.bak  parse_ycsbC.sh  parse_ycsbC.sh.bak  parse_ycsbD.sh  run.sh  run_all.sh  run_atomic_txn.sh  run_deletes.sh  run_gets.sh  run_puts.sh  run_range.sh  run_updates.sh  run_var_kv_gets.sh  run_var_kv_puts.sh  run_ycsbA.sh  run_ycsbB.sh  run_ycsbC.sh  run_ycsbD.sh  test_atomic_txn.cc  test_deletes.cc  test_gets.cc  test_puts.cc  test_ranges.cc  test_updates.cc  test_ycsbA.cc  test_ycsbB.cc  (+2 more)
pmem-rocksdb/h-rocks/: Makefile  batch.cu  batch.h  block_cache.cu  block_cache.cuh  command.h  compile.sh  cpu_reads.cc  env.sh  gpm-helper.cuh  gpu_gets.cu  gpu_gets.cuh  gpu_gets_values.cu  gpu_gets_values.cuh  gpu_puts.cu  gpu_puts.cuh  gpu_puts_values.cu  gpu_puts_values.cuh  gpu_range.cu  gpu_range.cuh  gpu_sort.cu  gpu_updates.cu  gpu_updates.cuh  hashing.cu  hashing.cuh  hashmap.cu  libgpm.cuh  main.cpp  memcpy_experiment.cu  memtable.cu  memtable.cuh  parse_atomic_txn.sh  parse_deletes.sh  parse_get_values.sh  parse_gets.sh  parse_gets.sh.bak  parse_kv_gets.sh  parse_kv_puts.sh  parse_put_values.sh  parse_puts.sh  (+52 more)
pmem-rocksdb/h-rocks/output_diff_sizes_gets/: output_1000000_8_1024  output_1000000_8_128  output_1000000_8_16  output_1000000_8_256  output_1000000_8_32  output_1000000_8_512  output_1000000_8_64  output_1000000_8_8
pmem-rocksdb/h-rocks/output_diff_sizes_values/: output_10000000_128_1024  output_10000000_128_128  output_10000000_128_16  output_10000000_128_256  output_10000000_128_32  output_10000000_128_512  output_10000000_128_64  output_10000000_128_8  output_10000000_16_1024  output_10000000_16_128  output_10000000_16_16  output_10000000_16_256  output_10000000_16_32  output_10000000_16_512  output_10000000_16_64  output_10000000_16_8  output_10000000_32_1024  output_10000000_32_128  output_10000000_32_16  output_10000000_32_256  output_10000000_32_32  output_10000000_32_512  output_10000000_32_64  output_10000000_32_8  output_10000000_64_1024  output_10000000_64_128  output_10000000_64_16  output_10000000_64_256  output_10000000_64_32  output_10000000_64_512  output_10000000_64_64  output_10000000_64_8  output_10000000_8_1024  output_10000000_8_128  output_10000000_8_16  output_10000000_8_256  output_10000000_8_32  output_10000000_8_512  output_10000000_8_64  output_10000000_8_8  (+40 more)
pmem-rocksdb/libgpm/include/: gpm-helper.cuh  libgpm.cuh
pmem-rocksdb/table/block_based/: binary_search_index_reader.cc.d  block_based_table_builder.cc
scripts/: compile_all.sh  dependencies.sh  plot_fig11.py  plot_latency_from_csvs.py  plot_lines_from_csvs.py  remove.sh  run_all.sh  run_figure10.sh  run_figure10.sh.bak  run_figure11.sh  run_figure12.sh  run_figure13a.sh  run_figure13b.sh  run_figure13c.sh  run_figure13c.sh.bak  run_figure13d.sh  run_figure13d.sh.bak  run_figure8a.sh  run_figure8a.sh.bak  run_figure8b.sh  run_figure8b.sh.bak  run_figure8c.sh  run_figure8d.sh  run_figure9a.sh  run_figure9b.sh  run_kv_mops.py  tmp
scripts/scripts_old/: run_all.sh  run_figure13d.sh  run_figure8a.sh  run_figure8c.sh  run_figure8c.sh.bak
utree/multiThread/utree/: concurrency_test  concurrency_test2  get_test  insert_test  insert_test.cc  lost_update  lost_update.cc  main-gu-zipfian  main-gu-zipfian.c  parse_gets.sh  parse_inserts.sh  parse_removes.sh  parse_updates.sh  remove_test  remove_test.cc  run_gets.sh  run_inserts.sh  run_removes.sh  run_updates.sh  update_test  utree.h
viper/: .gitignore  compile.sh  extract_ycsb.sh  extract_ycsb_data.py  run_ycsb_workload_gen.sh
viper/benchmark/: CMakeLists.txt  convert_ycsb.py  generate_ycsb.sh  latency_bw_bm.cpp  viper.hpp  ycsb_bm.cpp
viper/microbenchmarks/: CMakeLists.txt  get_key_value.cpp  get_rps.cpp  parse_delete.sh  parse_delete.sh.bak  parse_gets.sh  parse_puts.sh  parse_update.sh  parse_update.sh.bak  parse_var_kv_gets.sh  parse_var_kv_gets.sh.bak  parse_var_kv_puts.sh  parse_var_kv_puts.sh.bak  parse_ycsbA.sh  parse_ycsbB.sh  parse_ycsbC.sh  parse_ycsbD.sh  prefill_delete.cpp  prefill_get.cpp  prefill_put.cpp  prefill_update.cpp  put_key_value.cpp  put_latency.cpp  put_rps.cpp  recovery_test.cpp  run_all.sh  run_diff_size.sh  run_diff_size_get.sh  run_diff_thread.sh  run_diff_thread_get.sh  run_diff_thread_put.sh  run_get_rps.sh  run_prefill_delete.sh  run_prefill_get.sh  run_prefill_put.sh  run_put_latency.sh  run_put_rps.sh  run_same_key.sh  run_update.sh  run_var_kv_gets.sh  (+13 more)
(+70 files in other folders)
